# OVRSPACECALIBRATOR

./: .gitignore  .gitmodules  BuildWin64.bat  CMakeLists.txt  GenWin64.bat  LICENSE  NOTICE  README.md  Version.h
.github/workflows/: build.yaml
OpenVR-SpaceCalibrator/: Calibration.cpp  Calibration.h  CalibrationCalc.cpp  CalibrationCalc.h  CalibrationDebug.cpp  CalibrationMetrics.cpp  CalibrationMetrics.h  Configuration.cpp  IPCClient.cpp  OpenVR-SpaceCalibrator.cpp  OpenVR-SpaceCalibrator.vcxproj  OpenVR-SpaceCalibrator.vcxproj.filters  UserInterface.cpp  VRState.cpp
driver_01spacecalibrator/: driver.vrdrivermanifest
driver_01spacecalibrator/resources/settings/: default.vrsettings
install/: installer.nsi
lib/: CMakeLists.txt
lib/Debug/: libMinHook.x64.lib
src/: CMakeLists.txt
src/common/: Protocol.h
src/driver/: CMakeLists.txt  IPCServer.cpp  IPCServer.h  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  dllmain.cpp
src/overlay/: CMakeLists.txt  Calibration.cpp  Calibration.h  CalibrationCalc.cpp  CalibrationCalc.h  CalibrationDebug.cpp  CalibrationMetrics.cpp  Configuration.cpp  IPCClient.cpp  IPCClient.h  OpenVR-SpaceCalibrator.cpp  Resource.h  SpaceCalibrator.cpp  SpaceCalibrator.rc  UserInterface.cpp  VRState.cpp  VRState.h  imgui_extensions.cpp  imgui_extensions.h  manifest.vrmanifest  stdafx.cpp
